# py-htmx

./: .gitignore  Dockerfile  Makefile  README.md  config.json  inputs.json  main.py  pyproject.toml  requiements.txt  requirements.txt  tailwind.config.js
app/: __init__.py  app.py
app/routers/: api.py  dashboard.py  login.py  menu.py  order.py  pos.py  reminders.py  restaurant.py  root.py
app/services/: menu.py  order.py  restaurant.py
app/utils/: auth.py  exceptions.py  storage.py
config/: settings.py
scripts/: run.sh
static/css/: style.css
static/js/: cart.js  index.js  menu.js
templates/components/: breadcrumbs.html  header copy.html  header.html  navbar.html
templates/components/form/: dropdown.html  email.html  number.html  phone.html  text.html  textarea.html  time.html  upload_image.html  url.html
templates/components/view/: text_block.html
templates/pages/: base.html  dashboard.html  kitchen.html  login.html  menu.html  menu_add.html  menu_category.html  menu_edit.html  menu_view.html  not-found.html  order.html  register.html  reminders.html  restaurant.html
templates/partials/: items copy.html  items.html  section_header.html
templates/partials/menu/: add_menu.html  category.html  category_add.html  category_edit.html  category_list.html  content.html  edit_menu.html  menu_list.html  menu_row.html  view_menu.html
templates/partials/order/: content.html  kitchen.html  order_details.html  order_list.html
templates/partials/pos/: cart.html  category.html  content.html  (+1 more)
tests/: conftest.py  test_api.py  test_ui.py  test_unit.py
(+12 files in other folders)
